--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<title>This is the title of the webpage!</title>
+		<title>EC2 FPS</title>
 	</head>
 		<body>
-			<p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+			<p>Git practice exercise, DAW 1st year.</p>
+			<img src="./imgs/Git-logo.png" alt="Git logo">
 		</body>
 	<footer>
 	</footer>
-11 </html>
+</html>
