--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 			<img src="./imgs/Git-logo.png" alt="Git logo">
 		</body>
 	<footer>
+		<p>Company: FabrizioPS</p>
+3   <p><a href="mailto:fake@example.com">fake@example.com</a></p>
 	</footer>
 </html>
