Adding info into body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<body>
 			<p>Git practice exercise, DAW 1st year.</p>
 			<img src="./imgs/Git-logo.png" alt="Git logo">
+			<h1>Generating clonflict between branches</h1>
 		</body>
 	<footer>
 		<p>Company: FabrizioPS</p>
